# simple-port-scanner

./: .gitignore  Cargo.toml  README.md
src/: main.rs
